--- a/reggie-web-app/src/main/resources/application.yml
+++ b/reggie-web-app/src/main/resources/application.yml
@@ -13,7 +13,10 @@ spring:
       url: jdbc:mysql://localhost:3306/reggie?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
       password: root
-
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
