--- a/reggie-web-manage/src/main/resources/application.yml
+++ b/reggie-web-manage/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
       url: jdbc:mysql://localhost:3306/reggie?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
       password: root
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
 #mybatis:
 #  configuration:
 #    map-underscore-to-camel-case: true # 驼峰命名法映射 address_book ---> AddressBook
